test/functoria/e2e/errors/in_functor_not_enough/config.ml
open Functoria
open E2e

let device = main "Unikernel.Make" (job @-> job)
let () = register "in-functor-not-enough" [ device $ noop ]
